aligning footer at bottom : issue fixed.

--- a/app/styles/pages/style.less
+++ b/app/styles/pages/style.less
@@ -1,3 +1,9 @@
+html, body {
+  height: 100%;
+  min-height: 100%;
+  position: relative;
+}
+
 .apigeeHome {
 	ul.nav li.dropdown:hover ul.dropdown-menu { 
 		display: block; 
